[gd_scene load_steps=39 format=2]

[ext_resource path="res://Actor/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Actor/enemies/Arcade_machine/Arcade_machine.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Enemy_01.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_010.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_011.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_013.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_012.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemy_01_Explosion_01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_014.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_016.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Explosions/Enemy_01_Explosion_015.png" type="Texture" id=12]
[ext_resource path="res://Sounds/MonsterPinball_Death.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Explode",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="Animation" id=21]
resource_name = "Explode"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Explode" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.101 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 12, 13, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Areas/destroy_area/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../death")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/4/type = "value"
tracks/4/path = NodePath("../death:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../death:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.125
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=23]
resource_name = "Wander"
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 21.1148, 30.4407 )

[sub_resource type="CircleShape2D" id=25]
radius = 90.6459

[node name="Arcade_machine" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 150

[node name="Sprite" parent="Body" index="0"]
visible = false
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body" index="1"]
scale = Vector2( -1, 1 )
frames = SubResource( 20 )
animation = "Explode"

[node name="AnimationPlayer" parent="Body" index="2"]
anims/Explode = SubResource( 21 )
anims/Idle = SubResource( 22 )
anims/Wander = SubResource( 23 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 24 )

[node name="CollisionShape2D" parent="Areas/Detect_area" index="0"]
visible = true

[node name="destroy_area" type="Area2D" parent="Areas" index="1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/destroy_area" index="0"]
shape = SubResource( 25 )
disabled = true

[node name="death" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 13 )

[connection signal="dead" from="." to="." method="_on_Arcade_machine_dead"]
[connection signal="animation_finished" from="Body/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Areas/destroy_area" to="." method="_on_destroy_area_body_entered"]
